feat: add uncertainty