@@ -2,10 +2,13 @@ package org.palladiosimulator.dataflow.diagramgenerator.tests;
 
 import java.util.List;
 import java.util.Map;
+import java.util.function.BiPredicate;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
+import org.palladiosimulator.dataflow.confidentiality.analysis.builder.DataFlowAnalysisBuilder;
+import org.palladiosimulator.dataflow.confidentiality.analysis.builder.pcm.PCMDataFlowConfidentialityAnalysisBuilder;
 import org.palladiosimulator.dataflow.confidentiality.analysis.characteristics.DataFlowVariable;
 import org.palladiosimulator.dataflow.confidentiality.analysis.entity.sequence.AbstractActionSequenceElement;
 import org.palladiosimulator.dataflow.diagramgenerator.GeneratorOptions;
@@ -15,6 +18,9 @@ import org.palladiosimulator.dataflow.diagramgenerator.pcm.PCMGraphProcessor;
 import org.palladiosimulator.dataflow.diagramgenerator.plantuml.PlantUMLDrawingStrategy;
 import org.palladiosimulator.dataflow.diagramgenerator.testmodels.Activator;
 import org.palladiosimulator.dataflow.dictionary.characterized.DataDictionaryCharacterized.Literal;
+
+import dev.abunai.impact.analysis.PCMUncertaintyImpactAnalysisBuilder;
+import dev.abunai.impact.analysis.StandalonePCMUncertaintyImpactAnalysis;
 
 public class TestBase {
 	public static String PROJECT_NAME = "org.palladiosimulator.dataflow.diagramgenerator.testmodels";
@@ -35,24 +41,63 @@ public class TestBase {
 		options.setDrawOnlyNumbers(false);
 		options.setDrawParameters(true);
 
-		PCMDiagramGenerator diagramGenerator = new PCMDiagramGenerator(options, Activator.class);
+		String projectName = options.getProjectName();
+		String usageModelPath = options.getUsageModelPath();
+		String allocationPath = options.getAllocationPath();
+		String characteristicsPath = options.getCharacteristicsPath();
+
+		StandalonePCMUncertaintyImpactAnalysis analysis = new DataFlowAnalysisBuilder().standalone()
+				.modelProjectName(projectName).useBuilder(new PCMDataFlowConfidentialityAnalysisBuilder())
+				.usePluginActivator(Activator.class).useUsageModel(usageModelPath).useAllocationModel(allocationPath)
+				.useNodeCharacteristicsModel(characteristicsPath).useBuilder(new PCMUncertaintyImpactAnalysisBuilder())
+				.build();
+
+		try {
+			analysis.initializeAnalysis();
+		} catch (Exception e) {
+			analysis = new DataFlowAnalysisBuilder().standalone().modelProjectName(projectName)
+					.useBuilder(new PCMDataFlowConfidentialityAnalysisBuilder()).legacy()
+					.usePluginActivator(Activator.class).useUsageModel(usageModelPath)
+					.useAllocationModel(allocationPath).useBuilder(new PCMUncertaintyImpactAnalysisBuilder()).build();
+			analysis.initializeAnalysis();
+		}
+
+		analysis.getUncertaintySources().addConnectorUncertaintyInConnector("_w-qoYLNzEe2o46d27a6tVQ"); // S1_1
+		analysis.getUncertaintySources().addActorUncertaintyInResourceContainer("_E9SLkLN3Ee2o46d27a6tVQ"); // S1_2
+
+		PCMDiagramGenerator diagramGenerator = new PCMDiagramGenerator(options, analysis);
 
 		PlantUMLDrawingStrategy drawer = new PlantUMLDrawingStrategy();
 		PCMDataFlowElementFactory creator = PCMDataFlowElementFactory.getInstance();
 
-		Predicate<? super AbstractActionSequenceElement<?>> condition = node -> {
-			List<String> assignedRoles = node.getNodeCharacteristicsWithName("AssignedRoles").stream()
-					.map(it -> it.getName()).collect(Collectors.toList());
-			Map<DataFlowVariable, List<Literal>> grantedRoles = node.getDataFlowCharacteristicsWithName("GrantedRoles");
+		Predicate<? super AbstractActionSequenceElement<?>> condition = it -> {
 
-			return grantedRoles.entrySet().stream().map(dfd -> {
-				return !dfd.getValue().isEmpty() && dfd.getValue().stream().distinct()
-						.filter(it -> assignedRoles.contains(it.getName())).collect(Collectors.toList()).isEmpty();
-			}).anyMatch(Boolean::valueOf);
+			List<String> dataLiterals = it.getAllDataFlowVariables().stream().map(e -> e.getAllCharacteristics())
+					.flatMap(List::stream).map(e -> e.characteristicLiteral().getName()).toList();
+			List<String> nodeLiterals = it.getAllNodeCharacteristics().stream()
+					.map(e -> e.characteristicLiteral().getName()).toList();
+
+			return getConstraint().test(dataLiterals, nodeLiterals);
 		};
 
 		PCMGraphProcessor processor = new PCMGraphProcessor(creator, condition);
 
 		diagramGenerator.generateDataFlowDiagram(drawer, processor);
+	}
+
+	BiPredicate<List<String>, List<String>> getConstraint() {
+		return (List<String> dataLiterals, List<String> nodeLiterals) -> {
+			// S1_1
+			if (dataLiterals.contains("ConnectionIntercepted")) {
+				return true;
+			}
+
+			// S1_2
+			if (nodeLiterals.contains("IllegalDeploymentLocation")) {
+				return true;
+			}
+
+			return false;
+		};
 	}
 }
